--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <header class="resume__header">
         <div>
           <h1>Joe Jamsky</h1>
-          <p class="resume__subtitle">Creative Technologist &amp; Software Engineer</p>
+          <p class="resume__subtitle">Software Engineer</p>
         </div>
         <div class="resume__contact">
-          <a href="mailto:hello@joejamsky.com">hello@joejamsky.com</a>
+          <a href="mailto:joejamsky@gmail.com">joejamsky@gmail.com</a>
           <span>•</span>
-          <a href="https://www.linkedin.com" target="_blank" rel="noreferrer">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/joe-jamsky" target="_blank" rel="noreferrer">LinkedIn</a>
           <span>•</span>
           <a href="https://github.com/joejamsky" target="_blank" rel="noreferrer">GitHub</a>
         </div>
@@ -25,61 +25,114 @@
       <section class="resume__section">
         <h2>Summary</h2>
         <p>
-          Creative technologist blending design intuition with full-stack engineering to craft immersive digital
-          experiences. Passionate about real-time graphics, fluid UI, and meaningful narratives.
+          I'm a full-stack web developer with a love for learning.
+          I ventured into web development to merge my technical skills with my creative interests, 
+          with the goal of building innovative, user friendly, and aesthetically pleasing applications. 
         </p>
+        <p>In my spare time I enjoy topic of the day online classes, traveling, playing music, and chess.</p>
       </section>
 
       <section class="resume__section">
         <h2>Skills</h2>
         <ul class="resume__list">
-          <li><strong>Languages:</strong> TypeScript, JavaScript, Python, C#</li>
-          <li><strong>Frameworks:</strong> React, Next.js, Node.js, Express, Three.js</li>
-          <li><strong>Design:</strong> Figma, Blender, Adobe CC</li>
-          <li><strong>Tooling:</strong> Git, Webpack/Vite, Jest, Docker, CI/CD</li>
+          <li><strong>Languages:</strong> JavaScript (ES6), HTML, CSS, Python, Ruby, SQL, PHP, C++</li>
+          <li><strong>Frameworks:</strong> React, Node.js, WordPress, Three.js, Rails, Drupal</li>
+          <li><strong>Tooling:</strong> Git, Webpack, Netlify, AWS, Google Cloud, CI/CD</li>
+          <li><strong>OS:</strong> macOS, Windows, Linux</li>
+          <li>
+            <strong>Design / Creative Tools:</strong>
+              <div class="resume__software">
+                <div class="resume__software-section">
+                <h4 class="resume__software-title">3D &amp; AR</h4>
+                <ul class="resume__software-list">
+                  <li>3DS Max</li>
+                  <li>Maya</li>
+                  <li>ZBrush</li>
+                  <li>Blender</li>
+                  <li>Lens Studio</li>
+                  <li>Spark AR</li>
+                  <li>Effect House</li>
+                </ul>
+              </div>
+              <div class="resume__software-section">
+                <h4 class="resume__software-title">2D &amp; Design</h4>
+                <ul class="resume__software-list">
+                  <li>Adobe CC</li>
+                  <li>Figma</li>
+                  <li>Sketch</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </section>
 
       <section class="resume__section">
         <h2>Experience</h2>
         <div class="resume__item">
-          <h3>Lead Creative Engineer — Current Studio</h3>
-          <p class="resume__meta">2019 – Present</p>
+          <h3>Developer — Craft Worldwide, New York, NY</h3>
+          <p class="resume__meta">Nov 2019 – May 2024</p>
           <ul>
-            <li>Architect immersive 3D microsites and campaigns, boosting client engagement by 45%.</li>
-            <li>Lead cross-disciplinary teams to deliver polished experiences on aggressive schedules.</li>
+            <li>Worked on NY Lottery Progressive Web App: <a href="https://nylottery.ny.gov/" target="_blank" rel="noreferrer">https://nylottery.ny.gov/</a></li>
+              <ul>
+                <li>Collaborated with backend developers to integrate multiple databases.</li>
+                <li>Developed a variety of frontend features and splash pages using the React framework.</li>
+              </ul>
+            <li>Worked with coders and designers to create the Fuji Film US WordPress site: <a href="http://instaxus.com" target="_blank" rel="noreferrer">http://instax.com</a></li>
+              <ul>
+                <li>Implemented a custom WP theme using Bootstrap and responsive CSS.</li>
+                <li>Created a plugin to regularly update with new content from Instagram.</li>
+              </ul>
+            <li>Built several AR filters for Instagram, Snapchat, and TikTok.</li>
+              <ul>
+                <li>Worked with major social media tools such as Lens, Spark AR, and Effect House.</li>
+                <li>Created filters that incorporated animations, particles, 3d models, and scripts.</li>
+                <li>Worked with head and hand tracking to create a variety of effects.</li>
+              </ul>
+            <li>Edited and created Angular components for medical websites, following accessibility and design standards.</li>
+            <li>Created dozens of pixel-perfect banner ads and animations.</li>
           </ul>
         </div>
         <div class="resume__item">
-          <h3>Senior Front-End Developer — Horizon Labs</h3>
-          <p class="resume__meta">2016 – 2019</p>
+          <h3>Freelance 3D Artist — Ignite Advertising and Design, Portland, OR</h3>
+          <p class="resume__meta">Jan 2012 – Apr 2015</p>
           <ul>
-            <li>Built component libraries and accessibility tooling used across three product lines.</li>
-            <li>Championed design systems that reduced UI implementation time by 35%.</li>
+            <li>Modeled and textured 3D objects for 20+ projects.</li>
+            <li>Rendered photoreal images for product visualization.</li>
           </ul>
         </div>
         <div class="resume__item">
-          <h3>Interactive Media Designer — Freelance</h3>
-          <p class="resume__meta">2013 – 2016</p>
+          <h3>Test Associate — Experis, Tigard, OR</h3>
+          <p class="resume__meta">Apr 2013 – Jan 2014</p>
           <ul>
-            <li>Crafted bespoke interactive installations and storytelling for arts and culture partners.</li>
-            <li>Delivered end-to-end experiences from concept sketches to production code.</li>
+            <li>Filed bug reports and design suggestions for 5+ Xbox games.</li>
+            <li>Tested software using automated and self-guided tests.</li>
+          </ul>
+        </div>
+        <div class="resume__item">
+          <h3>CG Generalist — Bent Image Labs, Portland, OR</h3>
+          <p class="resume__meta">Jul 2012 – Apr 2013</p>
+          <ul>
+            <li>Set up and fixed rigs for characters and objects.</li>
+            <li>Created and fixed existing models, unwrapped UVs, and set up render scenes.</li>
           </ul>
         </div>
       </section>
 
-      <section class="resume__section">
+      <!-- <section class="resume__section">
         <h2>Projects</h2>
         <ul class="resume__list">
-          <li><strong>Immersive Portfolio:</strong> WebGL showcase with dynamic storytelling and interactive environments.</li>
-          <li><strong>Data Tide:</strong> Real-time analytics platform for marine research labs combining live sensor data and predictive modeling.</li>
-          <li><strong>Signal Bloom:</strong> Generative art installation translating ambient sound into cascading light sculptures.</li>
+          <li><strong>COMING SOON</strong></li>
         </ul>
-      </section>
+      </section> -->
 
       <section class="resume__section">
         <h2>Education</h2>
-        <p>B.S. in Interactive Media &amp; Computer Science — University of the Pacific, 2017</p>
+        <p>
+          <strong>Western Governors University:</strong> MS, Computer Science<br>
+          <strong>Art Institute of Portland:</strong> BFA, Game Art and Design<br>
+          <strong>St. Joseph’s College:</strong> BA, Psychology<br>
+        </p>
       </section>
     </main>
   </body>
