--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <section class="resume__section">
         <h2>Summary</h2>
         <p>
-          I'm a full-stack web developer with a love for learning.
-          I ventured into web development to merge my technical skills with my creative interests, 
+          I'm a software developer with a love for learning.
+          I ventured into computer science to merge my technical skills with my creative interests, 
           with the goal of building innovative, user friendly, and aesthetically pleasing applications. 
         </p>
         <p>In my spare time I enjoy topic of the day online classes, traveling, playing music, and chess.</p>
